--- a/src/main/webapp/resources/css/ocr4allweb.css
+++ b/src/main/webapp/resources/css/ocr4allweb.css
@@ -47,3 +47,9 @@ nav.top-nav a.page-title {
   line-height: 122px;
   font-size: 48px;
 }
+
+/* Image helper */
+img.centered {
+  display: block;
+  margin: 0 auto;
+}
