Added ocropus-nlbin settings as inputs to preprocessing page
- Send settings in AJAX request to be able to fetch them in controller

--- a/src/main/webapp/resources/css/ocr4allweb.css
+++ b/src/main/webapp/resources/css/ocr4allweb.css
@@ -64,3 +64,9 @@ img.centered {
   display: block;
   margin: 0 auto;
 }
+
+/* Table modifiers */
+table.compact * {
+  padding: 0px !important;
+  margin:  5px !important;
+}
