Added progess status update to preprocessing page
- Improved page layout
- Implemented progressbar handler
- Removed XHR (will be replaced with AJAX)

--- a/src/main/webapp/resources/css/ocr4allweb.css
+++ b/src/main/webapp/resources/css/ocr4allweb.css
@@ -70,3 +70,9 @@ table.compact * {
   padding: 0px !important;
   margin:  5px !important;
 }
+
+/* Progress bar adjustments */
+.progress {
+  background-color: #c7cfff;
+  height: 20px;
+}
