Made additional changes on preprocessing page
- Improved layout and usability of console output
- Added cancel button to cancel preprocessing process
- Added modals for cancelling functionality

--- a/src/main/webapp/resources/css/ocr4allweb.css
+++ b/src/main/webapp/resources/css/ocr4allweb.css
@@ -76,3 +76,11 @@ table.compact * {
   background-color: #c7cfff;
   height: 20px;
 }
+
+/* Console log pre tag */
+.console pre {
+  display: none;
+  height: 400px;
+  overflow-y: scroll;
+  background-color: #d3d3d3;
+}
