--- a/src/main/webapp/resources/css/ocr4allweb.css
+++ b/src/main/webapp/resources/css/ocr4allweb.css
@@ -70,6 +70,9 @@ table.compact td, table.compact div, table.compact p {
   padding: 0px;
   margin:  5px;
 }
+table.compact .select-wrapper {
+  margin: 0;
+}
 table.compact .prefix {
   padding-top: 0.5rem;
 }
@@ -97,12 +100,9 @@ table.compact .suffix {
   left : auto;
   right: -273px;
   top: 122px;
+  bottom: 0;
   overflow-y: auto;
   height: auto;
-  height: -moz-calc(100% - 122px);
-  height: -webkit-calc(100% - 122px);
-  height: -o-calc(100% - 122px);
-  height: calc(100% - 122px);
   padding-top: 10px !important;
   text-align: center;
 }
