Added page titles and project name on every page
- Adjusted project name on sidebar

--- a/src/main/webapp/resources/css/ocr4allweb.css
+++ b/src/main/webapp/resources/css/ocr4allweb.css
@@ -7,7 +7,7 @@ ul.side-nav {
 .site-description {
   display: block;
   font-size: 25px;
-  padding: 0 32px 34px 32px
+  padding: 0px 32px 34px 32px;
 }
 .side-nav li.active, nav ul a:hover {
   background-color: #8c9eff;
