Changed materialize accent color (for buttons, links, etc.)

--- a/src/main/webapp/resources/css/materialize.css
+++ b/src/main/webapp/resources/css/materialize.css
@@ -461,10 +461,10 @@
   color: #8c9eff !important; }
 
 .indigo.accent-2 {
-  background-color: #536dfe !important; }
+  background-color: #5c6bc0 !important; }
 
 .indigo-text.text-accent-2 {
-  color: #536dfe !important; }
+  color: #5c6bc0 !important; }
 
 .indigo.accent-3 {
   background-color: #3d5afe !important; }
@@ -2321,14 +2321,14 @@ td, th {
     .collection .collection-item:last-child {
       border-bottom: none; }
     .collection .collection-item.active {
-      background-color: #536dfe;
+      background-color: #5c6bc0;
       color: white; }
       .collection .collection-item.active .secondary-content {
         color: #fff; }
   .collection a.collection-item {
     display: block;
     transition: .25s;
-    color: #536dfe; }
+    color: #5c6bc0; }
     .collection a.collection-item:not(.active):hover {
       background-color: #ddd; }
   .collection.with-header .collection-header {
@@ -2342,7 +2342,7 @@ td, th {
 
 .secondary-content {
   float: right;
-  color: #536dfe; }
+  color: #5c6bc0; }
 
 .collapsible .collection {
   margin: 0;
@@ -2374,10 +2374,10 @@ td, th {
     top: 0;
     left: 0;
     bottom: 0;
-    background-color: #536dfe;
+    background-color: #5c6bc0;
     transition: width .3s linear; }
   .progress .indeterminate {
-    background-color: #536dfe; }
+    background-color: #5c6bc0; }
     .progress .indeterminate:before {
       content: '';
       position: absolute;
@@ -2475,7 +2475,7 @@ span.badge {
     font-weight: 300;
     font-size: 0.8rem;
     color: #fff;
-    background-color: #536dfe;
+    background-color: #5c6bc0;
     border-radius: 2px; }
   span.badge.new:after {
     content: " new"; }
@@ -3714,7 +3714,7 @@ small {
 .btn, .btn-large {
   text-decoration: none;
   color: #fff;
-  background-color: #536dfe;
+  background-color: #5c6bc0;
   text-align: center;
   letter-spacing: .5px;
   transition: .2s ease-out;
@@ -3732,13 +3732,13 @@ small {
   height: 40px;
   line-height: 40px;
   padding: 0;
-  background-color: #536dfe;
+  background-color: #5c6bc0;
   border-radius: 50%;
   transition: .3s;
   cursor: pointer;
   vertical-align: middle; }
   .btn-floating:hover {
-    background-color: #536dfe; }
+    background-color: #5c6bc0; }
   .btn-floating:before {
     border-radius: 0; }
   .btn-floating.btn-large {
@@ -3837,7 +3837,7 @@ button.btn-floating {
     z-index: -1;
     width: 40px;
     height: 40px;
-    background-color: #536dfe;
+    background-color: #5c6bc0;
     border-radius: 50%;
     transform: scale(0); }
 
@@ -3894,7 +3894,7 @@ button.btn-floating {
       height: 1px; }
     .dropdown-content li > a, .dropdown-content li > span {
       font-size: 16px;
-      color: #536dfe;
+      color: #5c6bc0;
       display: block;
       line-height: 22px;
       padding: 14px 16px; }
@@ -4348,8 +4348,8 @@ textarea.materialize-textarea {
   input[type=number]:not(.browser-default):focus:not([readonly]),
   input[type=search]:not(.browser-default):focus:not([readonly]),
   textarea.materialize-textarea:focus:not([readonly]) {
-    border-bottom: 1px solid #536dfe;
-    box-shadow: 0 1px 0 0 #536dfe; }
+    border-bottom: 1px solid #5c6bc0;
+    box-shadow: 0 1px 0 0 #5c6bc0; }
   input:not([type]):focus:not([readonly]) + label,
   input[type=text]:not(.browser-default):focus:not([readonly]) + label,
   input[type=password]:not(.browser-default):focus:not([readonly]) + label,
@@ -4363,7 +4363,7 @@ textarea.materialize-textarea {
   input[type=number]:not(.browser-default):focus:not([readonly]) + label,
   input[type=search]:not(.browser-default):focus:not([readonly]) + label,
   textarea.materialize-textarea:focus:not([readonly]) + label {
-    color: #536dfe; }
+    color: #5c6bc0; }
   input:not([type]).validate + label,
   input[type=text]:not(.browser-default).validate + label,
   input[type=password]:not(.browser-default).validate + label,
@@ -4606,7 +4606,7 @@ textarea.materialize-textarea + label:after, .select-wrapper + label:after {
     font-size: 2rem;
     transition: color .2s; }
     .input-field .prefix.active {
-      color: #536dfe; }
+      color: #5c6bc0; }
   .input-field .prefix ~ input,
   .input-field .prefix ~ textarea,
   .input-field .prefix ~ label,
@@ -4753,11 +4753,11 @@ textarea {
 [type="radio"]:checked + label:after,
 [type="radio"].with-gap:checked + label:before,
 [type="radio"].with-gap:checked + label:after {
-  border: 2px solid #536dfe; }
+  border: 2px solid #5c6bc0; }
 
 [type="radio"]:checked + label:after,
 [type="radio"].with-gap:checked + label:after {
-  background-color: #536dfe; }
+  background-color: #5c6bc0; }
 
 [type="radio"]:checked + label:after {
   transform: scale(1.02); }
@@ -4854,8 +4854,8 @@ form p:last-child {
   height: 22px;
   border-top: 2px solid transparent;
   border-left: 2px solid transparent;
-  border-right: 2px solid #536dfe;
-  border-bottom: 2px solid #536dfe;
+  border-right: 2px solid #5c6bc0;
+  border-bottom: 2px solid #5c6bc0;
   transform: rotate(40deg);
   backface-visibility: hidden;
   transform-origin: 100% 100%; }
@@ -4871,7 +4871,7 @@ form p:last-child {
   height: 22px;
   border-top: none;
   border-left: none;
-  border-right: 2px solid #536dfe;
+  border-right: 2px solid #5c6bc0;
   border-bottom: none;
   transform: rotate(90deg);
   backface-visibility: hidden;
@@ -4920,8 +4920,8 @@ form p:last-child {
   top: 0;
   width: 20px;
   height: 20px;
-  border: 2px solid #536dfe;
-  background-color: #536dfe;
+  border: 2px solid #5c6bc0;
+  background-color: #5c6bc0;
   z-index: 0; }
 [type="checkbox"].filled-in.tabbed:focus + label:after {
   border-radius: 2px;
@@ -4929,8 +4929,8 @@ form p:last-child {
   background-color: rgba(0, 0, 0, 0.1); }
 [type="checkbox"].filled-in.tabbed:checked:focus + label:after {
   border-radius: 2px;
-  background-color: #536dfe;
-  border-color: #536dfe; }
+  background-color: #5c6bc0;
+  border-color: #5c6bc0; }
 [type="checkbox"].filled-in:disabled:not(:checked) + label:before {
   background-color: transparent;
   border: 2px solid transparent; }
@@ -4962,7 +4962,7 @@ form p:last-child {
     .switch label input[type=checkbox]:checked + .lever:before, .switch label input[type=checkbox]:checked + .lever:after {
       left: 18px; }
     .switch label input[type=checkbox]:checked + .lever:after {
-      background-color: #536dfe; }
+      background-color: #5c6bc0; }
 
 .switch label .lever {
   content: "";
@@ -5183,7 +5183,7 @@ input[type=range] + .thumb {
   height: 0;
   width: 0;
   border-radius: 50%;
-  background-color: #536dfe;
+  background-color: #5c6bc0;
   margin-left: 7px;
   transform-origin: 50% 50%;
   transform: rotate(-45deg); }
@@ -5191,7 +5191,7 @@ input[type=range] + .thumb {
     display: block;
     width: 30px;
     text-align: center;
-    color: #536dfe;
+    color: #5c6bc0;
     font-size: 0;
     transform: rotate(45deg); }
   input[type=range] + .thumb.active {
@@ -5216,7 +5216,7 @@ input[type=range]::-webkit-slider-thumb {
   height: 14px;
   width: 14px;
   border-radius: 50%;
-  background-color: #536dfe;
+  background-color: #5c6bc0;
   transform-origin: 50% 50%;
   margin: -5px 0 0 0;
   transition: .3s; }
@@ -5239,7 +5239,7 @@ input[type=range]::-moz-range-thumb {
   height: 14px;
   width: 14px;
   border-radius: 50%;
-  background: #536dfe;
+  background: #5c6bc0;
   margin-top: -5px; }
 
 input[type=range]:-moz-focusring {
@@ -5268,7 +5268,7 @@ input[type=range]::-ms-thumb {
   height: 14px;
   width: 14px;
   border-radius: 50%;
-  background: #536dfe; }
+  background: #5c6bc0; }
 
 input[type=range]:focus::-ms-fill-lower {
   background: #888; }
@@ -5349,7 +5349,7 @@ input[type=range]:focus::-ms-fill-upper {
     .side-nav li > a.btn:hover, .side-nav li > a.btn-large:hover, .side-nav li > a.btn-large:hover {
       background-color: #6c83fe; }
     .side-nav li > a.btn-floating:hover {
-      background-color: #536dfe; }
+      background-color: #5c6bc0; }
     .side-nav li > a > i, .side-nav li > a > [class^="mdi-"], .side-nav li > a li > a > [class*="mdi-"], .side-nav li > a > i.material-icons {
       float: left;
       height: 48px;
@@ -5510,7 +5510,7 @@ input[type=range]:focus::-ms-fill-upper {
   width: 100%;
   height: 100%;
   opacity: 0;
-  border-color: #536dfe; }
+  border-color: #5c6bc0; }
 
 .spinner-blue,
 .spinner-blue-only {
@@ -6466,7 +6466,7 @@ input[type=range]:focus::-ms-fill-upper {
 }*/
 .picker__date-display {
   text-align: left;
-  background-color: #536dfe;
+  background-color: #5c6bc0;
   color: #fff;
   padding: 18px;
   font-weight: 300; }
@@ -6529,7 +6529,7 @@ input[type=range]:focus::-ms-fill-upper {
   .picker__day--infocus {
     padding: 1.1rem 0; } }
 .picker__day.picker__day--today {
-  color: #536dfe; }
+  color: #5c6bc0; }
 
 .picker__day.picker__day--today.picker__day--selected {
   color: #fff; }
@@ -6542,7 +6542,7 @@ input[type=range]:focus::-ms-fill-upper {
 .picker--focused .picker__day--selected {
   border-radius: 50%;
   transform: scale(0.9);
-  background-color: #536dfe;
+  background-color: #5c6bc0;
   color: #ffffff; }
   .picker__day--selected.picker__day--outfocus,
   .picker__day--selected:hover.picker__day--outfocus,
@@ -6556,7 +6556,7 @@ input[type=range]:focus::-ms-fill-upper {
 .picker__close, .picker__today, .picker__clear {
   font-size: 1.1rem;
   padding: 0 1rem;
-  color: #536dfe; }
+  color: #5c6bc0; }
 
 .picker__clear {
   color: #f44336;
@@ -6820,17 +6820,17 @@ button.picker__today:focus, button.picker__clear:focus, button.picker__close:foc
 
 .clockpicker-canvas-bearing {
   stroke: none;
-  fill: #536dfe; }
+  fill: #5c6bc0; }
 
 .clockpicker-canvas-bg {
   stroke: none;
-  fill: #536dfe; }
+  fill: #5c6bc0; }
 
 .clockpicker-canvas-bg-trans {
-  fill: #536dfe; }
+  fill: #5c6bc0; }
 
 .clockpicker-canvas line {
-  stroke: #536dfe;
+  stroke: #5c6bc0;
   stroke-width: 4;
   stroke-linecap: round;
   /*shape-rendering: crispEdges;*/ }
