Increased spacing after checkboxes in settings tables

--- a/src/main/webapp/resources/css/ocr4allweb.css
+++ b/src/main/webapp/resources/css/ocr4allweb.css
@@ -63,12 +63,18 @@ img.centered {
 }
 
 /* Table modifiers */
-table.compact td, table.compact div, table.compact p {
+table.compact td, table.compact div {
   padding: 0px;
   margin:  5px;
 }
+table.compact p > label {
+  margin-bottom: 20px;
+}
 table.compact .select-wrapper {
   margin: 0;
+}
+table.compact .includes-checkbox {
+  margin-bottom: 30px;
 }
 table.compact .prefix {
   padding-top: 0.5rem;
