Adjusted navigation appearance and order
- Moved recognition link in front of ground truth correction
- Fixed bug which prevents navigation elements from being highlighted
- Added navigation separator to separate logical parts

--- a/src/main/webapp/resources/css/ocr4allweb.css
+++ b/src/main/webapp/resources/css/ocr4allweb.css
@@ -12,6 +12,10 @@ ul.side-nav {
 .side-nav li.active, nav ul a:hover {
   background-color: #8c9eff;
 }
+.nav-separator {
+  margin: 10px 0;
+  border-bottom: 1px solid black;
+}
 a.button-collapse.top-nav {
   position: absolute;
   text-align: center;
