Added help icon to indicate existance of tooltip in segmentation JSP
- Improved tooltip information

--- a/src/main/webapp/resources/css/ocr4allweb.css
+++ b/src/main/webapp/resources/css/ocr4allweb.css
@@ -86,6 +86,10 @@ table.compact .suffix {
 table.clinched p > label {
   margin-bottom: 0px;
 }
+i.material-icons.tooltipped {
+  position: absolute;
+  padding-left: 10px;
+}
 
 /* Progress bar adjustments */
 .progress {
