Small adjustment on LineSegmentation settings

--- a/src/main/webapp/resources/css/ocr4allweb.css
+++ b/src/main/webapp/resources/css/ocr4allweb.css
@@ -96,6 +96,10 @@ i.material-icons.tooltipped {
   position: absolute;
   padding-left: 10px;
 }
+span.userWarning {
+  color:red;
+  font-size:9pt;
+}
 
 /* Progress bar adjustments */
 .progress {
