Added project name as information to header of all pages

--- a/src/main/webapp/resources/css/ocr4allweb.css
+++ b/src/main/webapp/resources/css/ocr4allweb.css
@@ -65,6 +65,12 @@ nav.top-nav a.page-title {
   line-height: 122px;
   font-size: 48px;
 }
+nav.top-nav a.project-name {
+  line-height: 111px;
+  padding-top: 19px;
+  padding-right: 10px;
+  font-size: 24px;
+}
 
 /* Image helper */
 img.centered {
