Small layout change of settings table alignment

--- a/src/main/webapp/resources/css/ocr4allweb.css
+++ b/src/main/webapp/resources/css/ocr4allweb.css
@@ -93,6 +93,9 @@ table.compact td, table.compact div {
   padding: 0px;
   margin:  5px;
 }
+table.compact td {
+  vertical-align: top;
+}
 table.compact p > label {
   margin-bottom: 20px;
 }
