--- a/src/main/webapp/resources/css/ocr4allweb.css
+++ b/src/main/webapp/resources/css/ocr4allweb.css
@@ -238,3 +238,7 @@ div.custom-header {
   margin-left: 0 !important;
   margin-right: 0 !important;
 }
+ul.invalid {
+  border: 1px solid red;
+  background-color: #ffe6e6;
+}
