Fixed empty model error handling in Recognition module

--- a/src/main/webapp/resources/css/ocr4allweb.css
+++ b/src/main/webapp/resources/css/ocr4allweb.css
@@ -239,6 +239,6 @@ div.custom-header {
   margin-right: 0 !important;
 }
 ul.invalid {
-  border: 1px solid red;
+  border: 1px solid red !important;
   background-color: #ffe6e6;
 }
