--- a/src/main/webapp/resources/css/ocr4allweb.css
+++ b/src/main/webapp/resources/css/ocr4allweb.css
@@ -291,6 +291,10 @@ button[data-id="msRecModelAddOption"] {
   font-size: 1.2rem;
   line-height: 3vh;
 }
+.footer-copyright{
+  display: block !important;
+}
+
 @media only screen and (max-width : 1700px) {
   button[data-id="msRecModelAddOption"] {
     margin-left: 0px;
