Added PDF as input format Moved functions from seperate converter class to OverviewHelper.java Modal now features input-field for custom DPI settings Progressbar now linked to conversion progress

--- a/src/main/webapp/resources/css/ocr4allweb.css
+++ b/src/main/webapp/resources/css/ocr4allweb.css
@@ -298,4 +298,8 @@ button[data-id="msRecModelAddOption"] {
     display:block;
   }
 }
+input[type=number]:invalid {
+  border-bottom: 1px solid red !important;
+  box-shadow: 0 1px 0 0 red !important;
+}
 
