--- a/src/main/webapp/resources/css/ocr4allweb.css
+++ b/src/main/webapp/resources/css/ocr4allweb.css
@@ -322,4 +322,8 @@ button[data-id="msRecModelAddOption"] {
     display:block;
   }
 }
+input[type=number]:invalid {
+  border-bottom: 1px solid red !important;
+  box-shadow: 0 1px 0 0 red !important;
+}
 
