(Re)Added export gtc button to the right

--- a/src/main/webapp/resources/css/ocr4allweb.css
+++ b/src/main/webapp/resources/css/ocr4allweb.css
@@ -315,6 +315,9 @@ button[data-id="msRecModelAddOption"] {
   padding-top: 5px;
   padding-left: 5px;
 }
+.secondary-btn {
+  float: right;
+}
 @media only screen and (max-width : 1700px) {
   button[data-id="msRecModelAddOption"] {
     margin-left: 0px;
