added LAREX button to import page

--- a/src/main/webapp/resources/css/ocr4allweb.css
+++ b/src/main/webapp/resources/css/ocr4allweb.css
@@ -309,6 +309,9 @@ button[data-id="msRecModelAddOption"] {
 .whitelist-button{
   margin: auto auto 21px;
 }
+#larexForm{
+  display: inline-block;
+}
 #whitelist-select{
   left: 0px !important;
   margin-top: 85px; /* #TODO Change this ugly hack asap*/
