--- a/src/main/webapp/resources/css/ocr4allweb.css
+++ b/src/main/webapp/resources/css/ocr4allweb.css
@@ -317,7 +317,16 @@ button[data-id="msRecModelAddOption"] {
   .footer-copyright .row{
     margin-bottom: 0px;
   }
+.footer-version{
+  margin-right: 5px;
+  font-size: 10px;
+  float: right;
+}
+  .footer-version .row{
+    margin-bottom: 2px;
+    margin-top: 2px;
 
+  }
 .personList{
   width: 80%;
   margin: auto;
