add legacy to latest project conversion

--- a/src/main/webapp/resources/css/ocr4allweb.css
+++ b/src/main/webapp/resources/css/ocr4allweb.css
@@ -371,3 +371,11 @@ input[type=number]:invalid {
 #OCR4all_Version_container{
   cursor: pointer;
 }
+
+label[for*="backupCheckbox"]{
+  color: black;
+}
+
+#legacy-convert-preloader{
+  display: none;
+}
