add imagelist filter described in #49

--- a/src/main/webapp/resources/css/ocr4allweb.css
+++ b/src/main/webapp/resources/css/ocr4allweb.css
@@ -368,6 +368,21 @@ input[type=number]:invalid {
     vertical-align: bottom;
 }
 
+#filter-option-row{
+  margin-left: 25% !important;
+  margin-bottom: 0 !important;
+}
+
+#filter-option-row div .select-wrapper input{
+  margin-bottom: 0;
+  line-height: 1rem;
+
+}
+
+#selectFilter{
+  position: relative !important;
+}
+
 #OCR4all_Version_container{
   cursor: pointer;
 }
