add possibility to preserve empty lines for text output

--- a/src/main/webapp/resources/css/ocr4allweb.css
+++ b/src/main/webapp/resources/css/ocr4allweb.css
@@ -403,3 +403,7 @@ label[for*="backupCheckbox"]{
 #legacy-convert-preloader{
   display: none;
 }
+
+#emptyLines-row form {
+  padding-left: 50px;
+}
